--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,212 @@
-alabaster==0.7.13
-Babel==2.14.0
-better-exceptions==0.3.3
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-defusedxml==0.7.1
-docutils==0.20.1
-exceptiongroup==1.2.0
-gaphas==3.11.3
-gaphor==2.22.1
-generic==1.1.2
-idna==3.6
+aiohttp==3.8.4
+aiosignal==1.3.1
+alabaster==0.7.12
+appdirs==1.4.4
+apsw==3.42.0.1
+apt-xapian-index==0.49
+argcomplete==2.0.0
+asttokens==2.2.1
+async-timeout==4.0.2
+attrs==23.1.0
+Babel==2.10.3
+backcall==0.2.0
+bcrypt==3.2.2
+beautifulsoup4==4.12.2
+beniget==0.4.1
+binwalk==2.3.3
+blinker==1.6.2
+Brotli==1.0.9
+build==0.10.0
+CacheControl==0.13.1
+certifi==2022.9.24
+chardet==5.1.0
+charset-normalizer==3.2.0
+cleo==2.0.1
+click==8.1.6
+colorama==0.4.6
+command-not-found==0.3
+contourpy==1.0.7
+cpuset==1.6
+crashtest==0.4.1
+cryptography==38.0.4
+css-parser==1.0.9
+cssselect==1.2.0
+cupshelpers==1.0
+cycler==0.11.0
+dbus-python==1.3.2
+decorator==5.1.1
+devscripts==2.23.6
+dh-cmake==0.6.2
+distlib==0.3.7
+distro==1.8.0
+distro-info==1.5+ubuntu0.23.10.1
+dnspython==2.4.1
+docutils==0.19
+dulwich==0.21.6
+executing==1.2.0
+fastimport==0.9.14
+feedparser==6.0.10
+filelock==3.12.2
+flake8==5.0.4
+fonttools==4.38.0
+freetype-py==2.4.0
+frozenlist==1.4.0
+fs==2.4.16
+fuse-python==1.0.5
+future==0.18.2
+gast==0.5.2
+gbp==0.9.32
+gpg==1.18.0
+gyp==0.1
+html2text==2020.1.16
+html5-parser==0.4.11
+html5lib==1.1
+httplib2==0.20.4
+idna==3.3
+ifaddr==0.2.0
+ijson==3.2.2
 imagesize==1.4.1
-iniconfig==2.0.0
-jedi==0.19.1
+importlib-metadata==4.12.0
+installer==0.7.0
+ipython==8.14.0
+isodate==0.6.1
+jaraco.classes==3.2.1
+jedi==0.18.2
+jeepney==0.8.0
 Jinja2==3.1.2
+jsonpointer==2.0
+jsonschema==4.10.3
+keyring==24.2.0
+kiwisolver==0.0.0
+language-selector==0.1
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.5
+lazr.uri==1.0.6
+libvirt-python==9.0.0
+lockfile==0.12.2
+lxml==4.9.3
+lz4==4.0.2+dfsg
+Mako==1.2.4.dev0
+Markdown==3.4.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-packaging==23.2
+matplotlib==3.6.3
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mdurl==0.1.2
+mechanize==0.4.8
+more-itertools==10.1.0
+mpmath==0.0.0
+msgpack==1.0.3
+multidict==6.0.4
+mutagen==1.46.0
+netifaces==0.11.0
+numpy==1.24.2
+oauthlib==3.2.2
+olefile==0.46
+packaging==23.1
+paramiko==2.12.0
 parso==0.8.3
-Pillow==10.0.1
-pluggy==1.3.0
-pycairo==1.25.1
-pycparser==2.21
-pydot==1.4.2
-pygit2==1.13.3
-Pygments==2.17.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.0
+pipenv==2023.7.23
+pkginfo==1.8.2
+platformdirs==3.10.0
+ply==3.11
+podman-compose==1.0.6
+poetry==1.6.1
+poetry-core==1.6.1
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.0.0
+py7zr==0.11.3+dfsg
+pycairo==1.24.0
+pychm==0.8.6
+pycodestyle==2.10.0
+pycryptodomex==3.11.0
+pycups==2.0.1
+pyflakes==2.5.0
+Pygments==2.15.1
 PyGObject==3.46.0
-pyparsing==3.1.1
-pytest==7.4.4
+PyJWT==2.7.0
+pylev==1.4.0
+pylibacl==0.7.0
+pyliblo==0.10.0
+PyNaCl==1.5.0
+PyOpenGL==3.1.6
+pyparsing==3.1.0
+pyproject_hooks==1.0.0
+PyQt5==5.15.9
+PyQt5-sip==12.12.2
+PyQt6==6.5.2
+PyQt6-sip==13.5.2
+PyQt6-WebEngine==6.5.0
+pyqtgraph==0.13.3
+pyrsistent==0.18.1
+python-apt==2.6.0+ubuntu1
+python-dateutil==2.8.2
+python-debian==0.1.49+ubuntu2
+python-dotenv==1.0.0
+python-magic==0.4.27
+pythran==0.11.0
+pytz==2023.3
+pyxattr==0.8.1
+pyxdg==0.28
+PyYAML==6.0.1
+ranger-fm==1.9.3
+rdflib==6.1.1
+regex==2022.10.31
+reportlab==4.0.4
+repoze.lru==0.7
 requests==2.31.0
+requests-toolbelt==1.0.0
+rich==13.3.1
+rlPyCairo==0.3.0
+roman==3.3
+Routes==2.5.1
+scipy==1.10.1
+scour==0.38.2
+SecretStorage==3.3.3
+sgmllib3k==1.0.0
+shellingham==1.5.1
+six==1.16.0
 snowballstemmer==2.2.0
-Sphinx==7.2.6
-sphinx-rtd-theme==2.0.0
-sphinxcontrib-applehelp==1.0.7
-sphinxcontrib-devhelp==1.0.5
-sphinxcontrib-htmlhelp==2.0.4
-sphinxcontrib-jquery==4.1
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.6
-sphinxcontrib-serializinghtml==1.1.9
-tinycss2==1.2.1
-urllib3==2.1.0
+soupsieve==2.4.1
+SPARQLWrapper==1.8.5
+Sphinx==5.3.0
+ssh-import-id==5.11
+stack-data==0.6.2
+sympy==1.12
+systemd-python==235
+texttable==1.6.7
+toml==0.10.2
+tomlkit==0.12.1
+tornado==6.3.2
+traitlets==5.5.0
+trove-classifiers==2023.7.6
+typing_extensions==4.7.1
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufoLib2==0.14.0
+ufw==0.36.2
+unattended-upgrades==0.1
+unicodedata2==15.0.0
+unidiff==0.7.3
+urllib3==1.26.16
+usb-creator==0.3.16
+virtme-ng==1.12
+virtualenv==20.24.1+ds
+virtualenv-clone==0.3.0
+wadllib==1.3.6
+wcwidth==0.2.5
 webencodings==0.5.1
+WebOb==1.8.6
+websockets==10.4
+wxPython==4.2.1
+xdg==5
+xkit==0.0.0
+yarl==1.8.2
+yt-dlp==2023.7.6
+zeroconf==0.76.0
+zipp==1.0.0
